fix(presences,rapports): NullPointerException en marquant un eleve absent/en retard
Root cause exacte du 'Requete invalide' remonte par l'utilisateur (visible
grace au message d'erreur ameliore precedent) : List.of(eleve.getParent(),
eleve.getParentSecondaire()) leve une NullPointerException des qu'un seul
des deux est null - la quasi-totalite des eleves n'ont pas de parent
secondaire. Marquer n'importe quel eleve ABSENT ou RETARD plantait donc
systematiquement des l'envoi de la notification aux parents, sur les deux
plateformes (web et mobile). Meme bug trouve et corrige dans
RapportJournalierServiceImpl. Remplace par Arrays.asList, qui tolere les
elements null.